fixing some overlap

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 header {
@@ -92,7 +94,8 @@ header {
   background-image: url("imgs/me2.jpg");
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: auto;
+  min-height: 450px; /* Set a minimum height for the about me photo */
 }
 
 #projects {
@@ -101,14 +104,12 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
 }
 
 .project-content {
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
-  height: auto;
   width: 100%;
   background-color: #568EA3;
   color: #34113F;
@@ -134,6 +135,16 @@ header {
   color: #FFE8D1;
 }
 
+.project-info,
+.project-vid {
+  flex-basis: 50%; /* Set the flex basis to 50% to make both sections take half of the width */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
 .project-vid {
   flex-basis: 50%;
   display: flex;
@@ -143,8 +154,8 @@ header {
 }
 
 .project-vid video {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #video-placeholder {
